--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -20,8 +20,8 @@
 
 - name: Install snap of VS Code
   snap:
-    name:
-      - code
+    name: code
+    classic: yes
 
 - name: Git clone acme-assembly-vscode-template
   git:
