--- a/site.yml
+++ b/site.yml
@@ -8,4 +8,5 @@
     - role: 'roles/vice64'
     - role: 'roles/c64-debugger'
     - role: 'roles/6502-examples'
+    - role: 'roles/x16-emulator'
     - role: 'roles/chrome'
