--- a/roles/vice64/tasks/main.yml
+++ b/roles/vice64/tasks/main.yml
@@ -1,49 +1,54 @@
 ---
-- name: "Create directory {{ EXTRACT_VICEDATA_TARGET_DIR }}"
-  file:
-    path: "{{ EXTRACT_VICEDATA_TARGET_DIR }}"
-    state: directory
-    mode: '0755'
 
-- name: "Create directory {{ DOWNLOAD_VICEDATA_DIR }}"
-  file:
-    path: "{{ DOWNLOAD_VICEDATA_DIR }}"
-    state: directory
-    mode: '0755'
-       
-- name: Install compiler and vice
+- name: Install vice prerequisites
   apt:
     pkg:
-    - vice
+    - flex
+    - byacc
+    - dos2unix
+    - xa65
+    - texinfo
+    - texlive-latex-base
+    - texlive-fonts-recommended
+    - texlive-latex-extra
+    - libglib2.0-dev
+    - libsdl2-dev
+    - libsdl2-image-dev
+    - libpng-dev
     state: present
   become: true
 
-- name: Download vice-data from S3
+- name: Download vice3.5 source
   get_url:
-    url: https://rodoherty1-vice-data.s3.eu-west-1.amazonaws.com/vice-data.tar.gz 
+    url: https://sourceforge.net/projects/vice-emu/files/releases/vice-3.5.tar.gz
+    dest: '{{ TOOLS_DIR }}/'
     validate_certs: no
-    dest: '{{ DOWNLOAD_VICEDATA_ARCHIVE }}'
 
-- name: Extract vice-data.tar.gz
+- name: Extract vice3.5
   unarchive:
-    src: "{{ DOWNLOAD_VICEDATA_ARCHIVE }}"
-    dest: "{{ EXTRACT_VICEDATA_TARGET_DIR }}"
-    list_files: yes
-  register: archive_contents
+    src: '{{ TOOLS_DIR }}/vice-3.5.tar.gz'
+    dest: '{{ TOOLS_DIR }}'
+
+- name: Configure Vice
+  command: './configure'
+  args:
+    chdir: "{{ TOOLS_DIR }}/vice-3.5" 
+
+- name: Build Vice
+  command: 'make install'
+  args:
+    chdir: "{{ TOOLS_DIR }}/vice-3.5" 
+  become: true
 
 - name: Copy vice-data contents to /usr/lib/vice
   copy:
-    src: "{{ EXTRACT_VICEDATA_TARGET_DIR }}/data/"
+    src: "{{ TOOLS_DIR }}/vice-3.5/data/"
     dest: /usr/lib/vice
     remote_src: yes
   become: true
 
-- name: 'Cleanup downloaded archives'
-  file: 
-    path: '{{ item }}' 
-    state: absent
-  with_items:
-    - '{{ EXTRACT_VICEDATA_TARGET_DIR }}' 
-    - '{{ DOWNLOAD_VICEDATA_ARCHIVE }}'
-    - '{{ DOWNLOAD_VICEDATA_DIR }}'
+# - name: 'Remove downloaded vice-3.5.tar.gz'
+#   file: 
+#     path: '{{ TOOLS_DIR }}/vice-3.5.tar.gz' 
+#     state: absent
 
