--- a/roles/vice64/tasks/main.yml
+++ b/roles/vice64/tasks/main.yml
@@ -1,54 +1,49 @@
 ---
+- name: "Create directory {{ EXTRACT_VICEDATA_TARGET_DIR }}"
+  file:
+    path: "{{ EXTRACT_VICEDATA_TARGET_DIR }}"
+    state: directory
+    mode: '0755'
 
-- name: Install vice prerequisites
+- name: "Create directory {{ DOWNLOAD_VICEDATA_DIR }}"
+  file:
+    path: "{{ DOWNLOAD_VICEDATA_DIR }}"
+    state: directory
+    mode: '0755'
+       
+- name: Install compiler and vice
   apt:
     pkg:
-    - flex
-    - byacc
-    - dos2unix
-    - xa65
-    - texinfo
-    - texlive-latex-base
-    - texlive-fonts-recommended
-    - texlive-latex-extra
-    - libglib2.0-dev
-    - libsdl2-dev
-    - libsdl2-image-dev
-    - libpng-dev
+    - vice
     state: present
   become: true
 
-- name: Download vice3.5 source
+- name: Download vice-data from S3
   get_url:
-    url: https://sourceforge.net/projects/vice-emu/files/releases/vice-3.5.tar.gz
-    dest: '{{ TOOLS_DIR }}/'
+    url: https://rodoherty1-vice-data.s3.eu-west-1.amazonaws.com/vice-data.tar.gz 
     validate_certs: no
+    dest: '{{ DOWNLOAD_VICEDATA_ARCHIVE }}'
 
-- name: Extract vice3.5
+- name: Extract vice-data.tar.gz
   unarchive:
-    src: '{{ TOOLS_DIR }}/vice-3.5.tar.gz'
-    dest: '{{ TOOLS_DIR }}'
-
-- name: Configure Vice
-  command: './configure'
-  args:
-    chdir: "{{ TOOLS_DIR }}/vice-3.5" 
-
-- name: Build Vice
-  command: 'make install'
-  args:
-    chdir: "{{ TOOLS_DIR }}/vice-3.5" 
-  become: true
+    src: "{{ DOWNLOAD_VICEDATA_ARCHIVE }}"
+    dest: "{{ EXTRACT_VICEDATA_TARGET_DIR }}"
+    list_files: yes
+  register: archive_contents
 
 - name: Copy vice-data contents to /usr/lib/vice
   copy:
-    src: "{{ TOOLS_DIR }}/vice-3.5/data/"
+    src: "{{ EXTRACT_VICEDATA_TARGET_DIR }}/data/"
     dest: /usr/lib/vice
     remote_src: yes
   become: true
 
-# - name: 'Remove downloaded vice-3.5.tar.gz'
-#   file: 
-#     path: '{{ TOOLS_DIR }}/vice-3.5.tar.gz' 
-#     state: absent
+- name: 'Cleanup downloaded archives'
+  file: 
+    path: '{{ item }}' 
+    state: absent
+  with_items:
+    - '{{ EXTRACT_VICEDATA_TARGET_DIR }}' 
+    - '{{ DOWNLOAD_VICEDATA_ARCHIVE }}'
+    - '{{ DOWNLOAD_VICEDATA_DIR }}'
 
