--- a/zsh/site.yml
+++ b/zsh/site.yml
@@ -1,4 +1,8 @@
 ---
 - hosts: all 
+  vars_prompt:
+    - name: password
+      prompt: What is your password?
+
   roles:
     - role: 'roles/zsh-and-ohmyzsh'
